# ModelCompressGym

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: ModelCompressGym_environment.py  __init__.py  app.py
tasks/: easy.yaml  hard.yaml  medium.yaml
