# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-ModelCompressGym"
version = "0.1.0"
description = "Modelcompressgym environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "torch",
    "torchvision",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
]

[tool.uv]
index = [
    { name = "pytorch-cpu", url = "https://download.pytorch.org/whl/cpu", explicit = true }
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m ModelCompressGym.server.app
server = "ModelCompressGym.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["ModelCompressGym", "ModelCompressGym.server"]
package-dir = { "ModelCompressGym" = ".", "ModelCompressGym.server" = "server" }